# sbisandbox

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  deploy.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
about/: index.html
benchmarks/gaussian_linear/: index.html
benchmarks/gaussian_linear_uniform/: index.html
benchmarks/gaussian_mixture/: index.html
benchmarks/lotka_volterra/: index.html
benchmarks/slcp/: index.html
benchmarks/two_moons/: index.html
docs/: README.md  about.md  deploy.sh  index.md  install.md  resources.md
docs/benchmarks/: gaussian_linear.md  gaussian_linear_uniform.md  gaussian_mixture.md  lotka_volterra.md  slcp.md  two_moons.md
docs/glossary/: amortization.md  index.md  nflow.md  nle.md  npe.md  nre.md  simulator.md
docs/tutorials/: index.md
glossary/: index.html
glossary/amortization/: index.html
glossary/nflow/: index.html
glossary/nle/: index.html
glossary/npe/: index.html
glossary/nre/: index.html
glossary/simulator/: index.html
install/: index.html
js/: mathjax.js
notebooks/: mcmc.ipynb  twomoons.ipynb
resources/: index.html
sbisandbox/: benchmark.py  pipeline.py  samplers.py  toymodel.py  types.py  utils.py
sbisandbox/benchmark/: __init__.py  benchmark.py  mcmc_benchmark.py  neural_benchmark.py  snle_benchmark.py  snpe_benchmark.py  snre_benchmark.py
sbisandbox/benchmarks/: __init__.py  gaussian_linear.py  gaussian_linear_uniform.py  gaussian_mixture.py  slcp.py  (+2 more)
search/: search_index.json
tests/: test_examples.py
tutorials/: index.html
(+17 files in other folders)
