[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sbisandbox"
authors = [
    { name = "Bernardo Veronese", email = "bernardo.veronese@edu.ufes.br" },
]
description = "Experiments with Simulation-based Inference.."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["simulation-based inference", "Bayesian inference", "neural networks"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/binado/sbisandbox"

[project.optional-dependencies]
dev = ['pre-commit', 'ruff']

[tool.setuptools.packages.find]
include = ['sbisandbox*']

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
